q_engine/compile_err_utf8.txt
[  0%] Building CXX object CMakeFiles/q_engine.dir/src/RLVR_Agent.cpp.obj
py : D:\Q-AI-Research\
q_engine\src\RLVR_Agen
t.cpp: In member 
function 'bool q_engin
e::RLVRAgent::prove(co
nst string&, 
q_engine::ExprPtr, 
q_engine::ExprPtr)':
Au caractère Ligne:1 
: 1
+ py -m cmake --build 
build -j 1 > 
compile_err.txt 2>&1 
; Get-Content c ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (D:\Q-AI-Re   
 searc...ine::Expr    
Ptr)'::String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
D:\Q-AI-Research\q_eng
ine\src\RLVR_Agent.cpp
:23:13: error: 
'last_lean_error_' 
was not declared in 
this scope
             
last_lean_error_ = "";
             
^~~~~~~~~~~~~~~~
D:\Q-AI-Research\q_eng
ine\src\RLVR_Agent.cpp
:27:13: error: 
'last_lean_error_' 
was not declared in 
this scope
             
last_lean_error_ = 
result.message; // 
Propagate exact 
stderr to Mutator
             
^~~~~~~~~~~~~~~~
CMakeFiles\q_engine.dir\build.make:228: recipe for target 'CMakeFiles/q_engine.dir/src/RLVR_Agent.cpp.obj' failed
mingw32-make.exe[2]: 
*** [CMakeFiles/q_engi
ne.dir/src/RLVR_Agent.
cpp.obj] Error 1
CMakeFiles\Makefile2:4378: recipe for target 'CMakeFiles/q_engine.dir/all' failed
mingw32-make.exe[1]: 
*** [CMakeFiles/q_engi
ne.dir/all] Error 2
Makefile:144: recipe for target 'all' failed
mingw32-make.exe: *** 
[all] Error 2
